invisible icon fix

--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@ h2 {
 }
 
 .work-link-image-homeward {
-    background: -.5rem -1.2rem / 120% url(images/homeward.jpg);
+    background: -.5rem -1.2rem / 120% url(images/homeward.JPG);
 }
 
 .work-link-image-phonAware {
